--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           source_file: 'lang'
           destination_repo: 'PixTheBot/PixBot'
-          destination_folder: 'PixBot/lang'
+          destination_folder: 'PixBot'
           user_email: ${{ secrets.EMAIL }}
           user_name: 'DorvakOff'
