--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checking repository
         uses: actions/checkout@v2
       - name: Clearing extras
-        run: rm -r .github && rm .gitignore && rm README.md && rm crowdin.yml
+        run: rm -r .github && rm .gitignore && rm README.md && rm crowdin.yml && mv lang/* / && rm lang
       - name: Displaying files
         run: tree
       - name: Pushing to another repository
@@ -18,8 +18,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source_file: 'lang'
           destination_repo: 'PixTheBot/PixBot'
-          destination_folder: 'PixBot'
+          destination_folder: 'src/main/resources'
           user_email: ${{ secrets.EMAIL }}
           user_name: 'DorvakOff'
