--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,6 +18,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
+          source_file: './'
           destination_repo: 'PixTheBot/PixBot'
           destination_folder: 'src/main/resources'
           user_email: ${{ secrets.EMAIL }}
